--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         <div class="footer-content">
             <div class="social-media">
                 <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/flux.app.br/" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <div class="contact-info">
                 <div class="contact-item">
                     <span class="contact-icon"><i class="fa-solid fa-phone"></i></span>
-                    <span>Telefone: (61) 4042-1001</span>
+                    <span>Telefone: 11 5558-0454</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon"><i class="fa-solid fa-envelope"></i></span>
-                    <span>Email: relacionamento@flux.app.br</span>
+                    <span>Email: comercial@flux.com.br</span>
                 </div>
             </div>
         </div>
