--- a/index.html
+++ b/index.html
@@ -22,12 +22,58 @@
     </header>
     <main>
         <section id="bem-vindo" class="hero-section">
-            <div class="hero-content">
-                <p class="hero-subtitle">Crédito Inteligente<br>para o licitante</p>
-                <img src="assets/FLUX-Landing-Page_Sempre-em-movimento-29-29.png" alt="Seu negócio sempre em movimento" class="hero-text-image">
+            <div class="hero-main-content">
+                <div class="hero-content">
+                    <p class="hero-subtitle">Crédito Inteligente<br>para o licitante</p>
+                    <img src="assets/FLUX-Landing-Page_Sempre-em-movimento-29-29.png" alt="Seu negócio sempre em movimento" class="hero-text-image">
+                </div>
+                <div class="hero-image">
+                    <img src="assets/FLUX-Landing-Page.png" alt="Flux Hero Image">
+                </div>
             </div>
-            <div class="hero-image">
-                <img src="assets/FLUX-Landing-Page.png" alt="Flux Hero Image">
+            <div class="video-container">
+                <iframe
+                  src="https://www.youtube.com/embed/2AnSbALxoD8"
+  width="560"
+  height="315"
+  allow="autoplay; encrypted-media"
+  frameborder="0"
+  allowfullscreen>
+</iframe>
+
+</div>
+
+            <div class="fluxo-content">
+                <div class="fluxo-text">
+                    <h2>Entenda o nosso fluxo de crédito para sua empresa</h2>
+                    <h3>Primeiro passo: você participa e vence um pregão eletrônico</h3>
+                    <p>Pronto, você foi declarado vencedor e agora precisa, além de toda documentação, providenciar os insumos para entregar no órgão comprador.</p>
+                    <p>O que acontece se você não tiver caixa para comprar? Você sabe que as instituições financeiras tradicionais, não entendem como um fluxo de caixa de curto tempo e no tamanho certo para este contrato é importante.</p>
+                    <p>Mas nós na Flux! Crédito inteligente para o licitante, sabemos! Por isso você faz uma simulação com a gente.</p>
+                </div>
+                <div class="fluxo-image">
+                    <img src="assets/FLUX-Landing-Page-18-962x1024.png" alt="Fluxo de Crédito">
+                </div>
+            </div>
+            <div class="fluxo-content">
+                <div class="fluxo-image">
+                    <img src="assets/FLUX-Landing-Page-19-882x1024.png" alt="Motor de análise Flux">
+                </div>
+                <div class="fluxo-text">
+                    <h2>Segundo: a Flux usa seu próprio motor de análise e encontra a melhor oferta de crédito para você</h2>
+                    <p>Nosso motor de análise de crédito vai além do histórico financeiro das empresas. Ele avaliar o objeto do contrato (e todas as suas nuances) e o órgão comprador.</p>
+                    <p>Desta maneira, a pontuação melhora e você, licitante pequeno ou novo no mercado, consegue acessar o crédito!* Simples, inteligente e rápido!</p>
+                </div>
+            </div>
+            <div class="fluxo-content">
+                <div class="fluxo-text">
+                    <h2>Último: você assina o contrato e a Flux que libera o dinheiro na sua conta.</h2>
+                    <p>Com o dinheiro no caixa sua empresa poderá realizar o contrato com o órgão contratante e você terá fôlego para participar do seu próximo certame.</p>
+                    <p>Quanto mais você a Flux! Crédito inteligente para o licitante, mais credibilidade sua empresa consegue e melhores taxas serão aplicadas.</p>
+                </div>
+                <div class="fluxo-image">
+                    <img src="assets/FLUX-Landing-Page-20-768x713.png" alt="Dinheiro na conta Flux">
+                </div>
             </div>
         </section>
         <section id="credito" class="credit-section">
@@ -36,25 +82,104 @@
             </div>
             <div class="credit-content">
                 <h1>De quanto sua empresa<br>precisa?</h1>
-                <p class="subtitle">Conte-nos o que você precisa que nós ligaremos para você.</p>
-                <form>
-                    <input type="text" placeholder="Nome completo" required>
-                    <input type="email" placeholder="Seu melhor e-mail" required>
-                    <button type="submit" class="submit-button">Solicitar Crédito</button>
+                <p class="subtitle">Responda algumas perguntas para iniciar sua análise de crédito.</p>
+                <form id="credit-form">
+                    <!-- Passo 1: Contrato Ativo -->
+                    <div id="step1" class="form-step active">
+                        <p class="form-question">Sua empresa possui contrato e/ou empenho ativo com órgão público?</p>
+                        <div class="radio-group">
+                            <label><input type="radio" name="contrato" value="sim"> Sim</label>
+                            <label><input type="radio" name="contrato" value="nao"> Não</label>
+                        </div>
+                    </div>
+
+                    <!-- Passo 2: Porte da Empresa -->
+                    <div id="step2" class="form-step">
+                        <p class="form-question">Qual o porte da sua empresa?</p>
+                        <div class="radio-group">
+                            <label><input type="radio" name="porte" value="mei"> MEI</label>
+                            <label><input type="radio" name="porte" value="me_epp"> ME ou EPP</label>
+                            <label><input type="radio" name="porte" value="media_grande"> Média ou Grande empresa</label>
+                        </div>
+                    </div>
+
+                    <!-- Passo 3: Faturamento -->
+                    <div id="step3" class="form-step">
+                        <p class="form-question">Qual a média de faturamento mensal da empresa?</p>
+                        <div class="radio-group">
+                            <label><input type="radio" name="faturamento" value="ate_100k"> Até R$ 100 mil</label>
+                            <label><input type="radio" name="faturamento" value="100k_500k"> De R$ 100 mil a R$ 500 mil</label>
+                            <label><input type="radio" name="faturamento" value="acima_500k"> Acima de R$ 500 mil</label>
+                        </div>
+                    </div>
+
+                    <!-- Passo 4: Dados de Contato -->
+                    <div id="step4" class="form-step">
+                        <p class="form-question">Perfeito! Agora precisamos de alguns dados para dar andamento à análise inicial:</p>
+                        <input type="text" placeholder="CNPJ da empresa" required>
+                        <input type="text" placeholder="Nome do responsável" required>
+                        <input type="email" placeholder="E-mail" required>
+                        <input type="tel" placeholder="Telefone / WhatsApp" required>
+                        <button type="submit" class="submit-button">Enviar Análise</button>
+                    </div>
+
+                    <!-- Passo 5: Upload Opcional -->
+                    <div id="step5" class="form-step">
+                        <div class="upload-section">
+                            <p><strong>Caso queira agilizar a análise, você pode opcionalmente já enviar os documentos abaixo.</strong></p>
+                            <p>⚠️ O envio não garante aprovação, mas ajuda na avaliação da viabilidade da operação.</p>
+                            <p>Documentos opcionais:</p>
+                            <ul>
+                                <li>Cartão CNPJ</li>
+                                <li>Faturamento recente da empresa</li>
+                                <li>Documento do(s) sócio(s)</li>
+                                <li>Edital ou contrato/empenho</li>
+                                <li>Ata do certame (se houver)</li>
+                            </ul>
+                            <input type="file" multiple>
+                        </div>
+                        <button type="submit" class="submit-button">Concluir</button>
+                    </div>
+
+                    <!-- Mensagens de Erro/Fim -->
+                    <div id="msg-contrato-nao" class="form-message error">
+                        No momento, a antecipação de recebíveis da Flux é destinada exclusivamente a empresas que possuam contrato ou empenho ativo com órgão público. Assim que sua empresa estiver nessa etapa, será um prazer conversar.
+                    </div>
+                    <div id="msg-porte-mei" class="form-message error">
+                        Atualmente, a Flux não opera antecipação de recebíveis para empresas enquadradas como MEI. Caso sua empresa altere o enquadramento no futuro, ficamos à disposição.
+                    </div>
+                    <div id="msg-faturamento-baixo" class="form-message error">
+                        No momento, a Flux atua com operações a partir de um porte mínimo de faturamento. Agradecemos o interesse e permanecemos à disposição para futuras oportunidades.
+                    </div>
+                    <div id="msg-final" class="form-message success">
+                        Obrigado pelas informações. A equipe da Flux irá analisar os dados enviados e, caso a operação seja aderente, entraremos em contato para dar continuidade à conversa.
+                    </div>
                 </form>
             </div>
         </section>
         <section id="sobre">
-            <h1>Sobre a Flux!</h1>
-            <p>Informações sobre a empresa Flux.</p>
+            <div class="sobre-content">
+                <h1>Sobre a Flux!</h1>
+                <p>
+                    Somos a Flux! Crédito inteligente para licitantes. Respondemos como FLUX CORRESPONDENTE BANCÁRIO E INFORMÁTICA (CNPJ: 32.194.496/0001-78), uma fintech voltada à concessão de crédito para micro e pequenas empresas participantes de licitações governamentais. Nascemos para sanar uma das maiores dificuldades de atuação em um dos mercados de crédito mais complexos do país. Através do nosso conhecimento em licitações públicas, queremos apoiar os pequenos empreendedores, de maneira fácil, flexível e descomplicada.
+                </p>
+                
+            </div>
+            <div class="sobre-form">
+                <form>
+                    <input type="text" placeholder="Nome completo" required>
+                    <input type="email" placeholder="Seu melhor e-mail" required>
+                    <button type="submit" class="submit-button">Enviar</button>
+                </form>
+            </div>
         </section>
     </main>
     <footer>
         <div class="footer-content">
             <div class="social-media">
-                <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/flux.app.br/" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/flux.app.br/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <div class="contact-info">
                 <div class="contact-item">
@@ -68,5 +193,6 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/form-logic.js"></script>
 </body>
 </html>
