--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="video-container">
                 <iframe
-                  src="https://www.youtube.com/embed/2AnSbALxoD8"
+                  src="https://www.youtube.com/embed/JCrG8l21bus"
   width="560"
   height="315"
   allow="autoplay; encrypted-media"
