Alterado razão social

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="sobre-content">
                 <h1>Sobre a Flux!</h1>
                 <p>
-                    Somos a Flux! Crédito inteligente para licitantes. Respondemos como FLUX CORRESPONDENTE BANCÁRIO E INFORMÁTICA (CNPJ: 32.194.496/0001-78), uma fintech voltada à concessão de crédito para micro e pequenas empresas participantes de licitações governamentais. Nascemos para sanar uma das maiores dificuldades de atuação em um dos mercados de crédito mais complexos do país. Através do nosso conhecimento em licitações públicas, queremos apoiar os pequenos empreendedores, de maneira fácil, flexível e descomplicada.
+                    Somos a Flux! Crédito inteligente para licitantes. Respondemos como FLUX S/A (CNPJ: 32.194.496/0001-78), uma fintech voltada à concessão de crédito para micro e pequenas empresas participantes de licitações governamentais. Nascemos para sanar uma das maiores dificuldades de atuação em um dos mercados de crédito mais complexos do país. Através do nosso conhecimento em licitações públicas, queremos apoiar os pequenos empreendedores, de maneira fácil, flexível e descomplicada.
                 </p>
                 
             </div>
