Adicionado plataforma flux

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#bem-vindo">Bem-Vindo!</a>
             <a href="#sobre">Sobre a Flux!</a>
             <a href="politica.html">Politica Flux</a>
+            <a href="https://hmg.flux.app.br/login" target="_blank" rel="noopener noreferrer">Acesse sua conta</a>
             <a href="#credito" class="credit-button">Peça Seu Crédito</a>
         </nav>
     </header>
