--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                 <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <div class="contact-info">
-                <div class="contact-item">
+                <!-- <div class="contact-item">
                     <span class="contact-icon"><i class="fa-solid fa-phone"></i></span>
                     <span>Telefone: 11 5558-0454</span>
-                </div>
+                </div> -->
                 <div class="contact-item">
                     <span class="contact-icon"><i class="fa-solid fa-envelope"></i></span>
                     <span>Email: comercial@flux.com.br</span>
