--- a/politica.html
+++ b/politica.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politica Flux - Flux</title>
     <link rel="icon" href="assets/favicon-96x96-1.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,12 +17,196 @@
             <a href="index.html#bem-vindo">Bem-Vindo!</a>
             <a href="index.html#sobre">Sobre a Flux!</a>
             <a href="politica.html">Politica Flux</a>
+            <a href="https://hmg.flux.app.br/login" target="_blank" rel="noopener noreferrer">Acesse sua conta</a>
             <a href="index.html#credito" class="credit-button">Peça Seu Crédito</a>
         </nav>
     </header>
     <main>
-        <h1>Politica Flux</h1>
-        <p>Detalhes sobre a política da Flux.</p>
+        <div class="policy-content">
+            <h1>Política de privacidade</h1>
+            <p>A Flux e todos os seus colaboradores (“Nós”) leva a privacidade a sério. Por isso, nesta Política de Privacidade (“Política”) explicamos as formas como nós utilizamos, armazenamos, compartilhamos e protegemos os dados pessoais coletados a partir do uso dos nossos serviços e soluções (coletivamente “Serviços”) e da visita aos nossos websites e como os titulares do dados podem exercer os direitos previstos na legislação aplicável.</p>
+            <p>Os dados pessoais que coletamos dependem do contexto das suas interações conosco. Para facilitar a sua compreensão, explicamos nesta Política como tratamos os dados de (i) clientes (“Clientes”), consumidores de Clientes (“Consumidores”) e de usuários dos nossos websites (“Usuários”), coletivamente (“Titulares” ou “você”).</p>
+            <p>Políticas de Privacidade específicas podem ser aplicáveis para alguns dos nossos produtos e serviços. Para mais informações sobre nossas práticas de privacidade relacionadas a um produto ou serviço específico, visite a página web deste produto ou serviço.</p>
+        </div>
+
+        <div class="accordion">
+
+            <div class="accordion-item">
+  <div class="accordion-header">Quem somos nós <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      A Flux! Crédito inteligente para o licitante é uma fintech de Brasília que desde 2020
+      desenvolve soluções de crédito para empresas que participam de licitações públicas.
+    </p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Definições importantes <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p><strong>LGPD:</strong> Lei nº 13.709/2018 que regula o tratamento de dados pessoais.</p>
+    <p><strong>Agentes de Tratamento:</strong> Controlador e Operador.</p>
+    <p><strong>Dados Pessoais:</strong> Informações relacionadas à pessoa natural identificada ou identificável.</p>
+    <p><strong>Tratamento:</strong> Toda operação realizada com dados pessoais.</p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Clientes <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <h4>Dados que coletamos</h4>
+    <p>Dados fornecidos diretamente, dados automáticos e dados obtidos de outras fontes.</p>
+
+    <h4>Como utilizamos esses dados</h4>
+    <ul>
+      <li>Execução de contratos</li>
+      <li>Segurança</li>
+      <li>Comunicação</li>
+      <li>Conformidade legal</li>
+    </ul>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Consumidores <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      Esta seção se aplica aos dados pessoais de consumidores dos nossos clientes.
+    </p>
+    <h4>Dados coletados</h4>
+    <ul>
+      <li>Dados recebidos dos clientes</li>
+      <li>Dados automáticos de navegação</li>
+      <li>Dados de outras fontes</li>
+    </ul>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Usuários <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <h4>Dados que coletamos</h4>
+    <ul>
+      <li>Nome, e-mail, telefone</li>
+      <li>CPF e CNPJ</li>
+      <li>Dados de navegação</li>
+    </ul>
+
+    <h4>Como utilizamos estes dados</h4>
+    <ul>
+      <li>Melhorar os websites</li>
+      <li>Segurança</li>
+      <li>Marketing</li>
+    </ul>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Como compartilhamos dados pessoais <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <ul>
+      <li>Prestadores de serviços</li>
+      <li>Entidades de proteção ao crédito</li>
+      <li>Autoridades públicas</li>
+      <li>Transferência de ativos</li>
+      <li>Com consentimento</li>
+    </ul>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Cookies e Tecnologias de Rastreamento <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      Utilizamos cookies e tecnologias similares para melhorar a experiência do usuário,
+      personalizar conteúdo e garantir segurança.
+    </p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Transferência de dados para o exterior <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      Dados podem ser transferidos para prestadores de serviços no exterior,
+      respeitando a legislação aplicável.
+    </p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Interações com sites de terceiros <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      Não nos responsabilizamos por políticas de privacidade de sites de terceiros.
+    </p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Segurança <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      Adotamos práticas técnicas e organizacionais para proteger os dados pessoais.
+    </p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Direitos do titular <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <ul>
+      <li>Acesso</li>
+      <li>Correção</li>
+      <li>Exclusão</li>
+      <li>Portabilidade</li>
+      <li>Revogação de consentimento</li>
+    </ul>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Término do tratamento <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      Os dados são tratados enquanto necessários para cumprir obrigações legais ou contratuais.
+    </p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <div class="accordion-header">Alteração na política de privacidade <span class="icon">+</span></div>
+  <div class="accordion-content">
+    <p>
+      A política pode ser alterada a qualquer momento, com aviso aos usuários.
+    </p>
+  </div>
+</div>
+
+
+  <!-- Continue adicionando os outros itens seguindo o mesmo padrão -->
+
+        </div>
     </main>
+    <footer>
+        <div class="footer-content">
+            <div class="social-media">
+                <a href="#" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/flux.app.br/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <span class="contact-icon"><i class="fa-solid fa-phone"></i></span>
+                    <span>Telefone: 11 5558-0454</span>
+                </div>
+                <div class="contact-item">
+                    <span class="contact-icon"><i class="fa-solid fa-envelope"></i></span>
+                    <span>Email: comercial@flux.com.br</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="scripts/accordion.js"></script>
 </body>
 </html>
