Concluído politica e alterado exibição de video

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -26,31 +28,31 @@
             <div class="hero-main-content">
                 <div class="hero-content">
                     <p class="hero-subtitle">Crédito Inteligente<br>para o licitante</p>
-                    <img src="assets/FLUX-Landing-Page_Sempre-em-movimento-29-29.png" alt="Seu negócio sempre em movimento" class="hero-text-image">
+                    <img src="assets/FLUX-Landing-Page_Sempre-em-movimento-29-29.png"
+                        alt="Seu negócio sempre em movimento" class="hero-text-image">
                 </div>
                 <div class="hero-image">
                     <img src="assets/FLUX-Landing-Page.png" alt="Flux Hero Image">
                 </div>
             </div>
             <div class="video-container">
-                <iframe
-                  src="https://www.youtube.com/embed/JCrG8l21bus"
-  width="560"
-  height="315"
-  allow="autoplay; encrypted-media"
-  frameborder="0"
-  allowfullscreen>
-</iframe>
+                <iframe src="https://www.youtube.com/embed/JCrG8l21bus?autoplay=1&mute=1"
+                    allow="autoplay; encrypted-media" frameborder="0" allowfullscreen>
+                </iframe>
 
-</div>
+            </div>
 
             <div class="fluxo-content">
                 <div class="fluxo-text">
                     <h2>Entenda o nosso fluxo de crédito para sua empresa</h2>
                     <h3>Primeiro passo: você participa e vence um pregão eletrônico</h3>
-                    <p>Pronto, você foi declarado vencedor e agora precisa, além de toda documentação, providenciar os insumos para entregar no órgão comprador.</p>
-                    <p>O que acontece se você não tiver caixa para comprar? Você sabe que as instituições financeiras tradicionais, não entendem como um fluxo de caixa de curto tempo e no tamanho certo para este contrato é importante.</p>
-                    <p>Mas nós na Flux! Crédito inteligente para o licitante, sabemos! Por isso você faz uma simulação com a gente.</p>
+                    <p>Pronto, você foi declarado vencedor e agora precisa, além de toda documentação, providenciar os
+                        insumos para entregar no órgão comprador.</p>
+                    <p>O que acontece se você não tiver caixa para comprar? Você sabe que as instituições financeiras
+                        tradicionais, não entendem como um fluxo de caixa de curto tempo e no tamanho certo para este
+                        contrato é importante.</p>
+                    <p>Mas nós na Flux! Crédito inteligente para o licitante, sabemos! Por isso você faz uma simulação
+                        com a gente.</p>
                 </div>
                 <div class="fluxo-image">
                     <img src="assets/FLUX-Landing-Page-18-962x1024.png" alt="Fluxo de Crédito">
@@ -61,16 +63,21 @@
                     <img src="assets/FLUX-Landing-Page-19-882x1024.png" alt="Motor de análise Flux">
                 </div>
                 <div class="fluxo-text">
-                    <h2>Segundo: a Flux usa seu próprio motor de análise e encontra a melhor oferta de crédito para você</h2>
-                    <p>Nosso motor de análise de crédito vai além do histórico financeiro das empresas. Ele avaliar o objeto do contrato (e todas as suas nuances) e o órgão comprador.</p>
-                    <p>Desta maneira, a pontuação melhora e você, licitante pequeno ou novo no mercado, consegue acessar o crédito!* Simples, inteligente e rápido!</p>
+                    <h2>Segundo: a Flux usa seu próprio motor de análise e encontra a melhor oferta de crédito para você
+                    </h2>
+                    <p>Nosso motor de análise de crédito vai além do histórico financeiro das empresas. Ele avaliar o
+                        objeto do contrato (e todas as suas nuances) e o órgão comprador.</p>
+                    <p>Desta maneira, a pontuação melhora e você, licitante pequeno ou novo no mercado, consegue acessar
+                        o crédito!* Simples, inteligente e rápido!</p>
                 </div>
             </div>
             <div class="fluxo-content">
                 <div class="fluxo-text">
                     <h2>Último: você assina o contrato e a Flux que libera o dinheiro na sua conta.</h2>
-                    <p>Com o dinheiro no caixa sua empresa poderá realizar o contrato com o órgão contratante e você terá fôlego para participar do seu próximo certame.</p>
-                    <p>Quanto mais você a Flux! Crédito inteligente para o licitante, mais credibilidade sua empresa consegue e melhores taxas serão aplicadas.</p>
+                    <p>Com o dinheiro no caixa sua empresa poderá realizar o contrato com o órgão contratante e você
+                        terá fôlego para participar do seu próximo certame.</p>
+                    <p>Quanto mais você a Flux! Crédito inteligente para o licitante, mais credibilidade sua empresa
+                        consegue e melhores taxas serão aplicadas.</p>
                 </div>
                 <div class="fluxo-image">
                     <img src="assets/FLUX-Landing-Page-20-768x713.png" alt="Dinheiro na conta Flux">
@@ -100,7 +107,8 @@
                         <div class="radio-group">
                             <label><input type="radio" name="porte" value="mei"> MEI</label>
                             <label><input type="radio" name="porte" value="me_epp"> ME ou EPP</label>
-                            <label><input type="radio" name="porte" value="media_grande"> Média ou Grande empresa</label>
+                            <label><input type="radio" name="porte" value="media_grande"> Média ou Grande
+                                empresa</label>
                         </div>
                     </div>
 
@@ -109,14 +117,17 @@
                         <p class="form-question">Qual a média de faturamento mensal da empresa?</p>
                         <div class="radio-group">
                             <label><input type="radio" name="faturamento" value="ate_100k"> Até R$ 100 mil</label>
-                            <label><input type="radio" name="faturamento" value="100k_500k"> De R$ 100 mil a R$ 500 mil</label>
-                            <label><input type="radio" name="faturamento" value="acima_500k"> Acima de R$ 500 mil</label>
+                            <label><input type="radio" name="faturamento" value="100k_500k"> De R$ 100 mil a R$ 500
+                                mil</label>
+                            <label><input type="radio" name="faturamento" value="acima_500k"> Acima de R$ 500
+                                mil</label>
                         </div>
                     </div>
 
                     <!-- Passo 4: Dados de Contato -->
                     <div id="step4" class="form-step">
-                        <p class="form-question">Perfeito! Agora precisamos de alguns dados para dar andamento à análise inicial:</p>
+                        <p class="form-question">Perfeito! Agora precisamos de alguns dados para dar andamento à análise
+                            inicial:</p>
                         <input type="text" placeholder="CNPJ da empresa" required>
                         <input type="text" placeholder="Nome do responsável" required>
                         <input type="email" placeholder="E-mail" required>
@@ -127,7 +138,8 @@
                     <!-- Passo 5: Upload Opcional -->
                     <div id="step5" class="form-step">
                         <div class="upload-section">
-                            <p><strong>Caso queira agilizar a análise, você pode opcionalmente já enviar os documentos abaixo.</strong></p>
+                            <p><strong>Caso queira agilizar a análise, você pode opcionalmente já enviar os documentos
+                                    abaixo.</strong></p>
                             <p>⚠️ O envio não garante aprovação, mas ajuda na avaliação da viabilidade da operação.</p>
                             <p>Documentos opcionais:</p>
                             <ul>
@@ -144,16 +156,21 @@
 
                     <!-- Mensagens de Erro/Fim -->
                     <div id="msg-contrato-nao" class="form-message error">
-                        No momento, a antecipação de recebíveis da Flux é destinada exclusivamente a empresas que possuam contrato ou empenho ativo com órgão público. Assim que sua empresa estiver nessa etapa, será um prazer conversar.
+                        No momento, a antecipação de recebíveis da Flux é destinada exclusivamente a empresas que
+                        possuam contrato ou empenho ativo com órgão público. Assim que sua empresa estiver nessa etapa,
+                        será um prazer conversar.
                     </div>
                     <div id="msg-porte-mei" class="form-message error">
-                        Atualmente, a Flux não opera antecipação de recebíveis para empresas enquadradas como MEI. Caso sua empresa altere o enquadramento no futuro, ficamos à disposição.
+                        Atualmente, a Flux não opera antecipação de recebíveis para empresas enquadradas como MEI. Caso
+                        sua empresa altere o enquadramento no futuro, ficamos à disposição.
                     </div>
                     <div id="msg-faturamento-baixo" class="form-message error">
-                        No momento, a Flux atua com operações a partir de um porte mínimo de faturamento. Agradecemos o interesse e permanecemos à disposição para futuras oportunidades.
+                        No momento, a Flux atua com operações a partir de um porte mínimo de faturamento. Agradecemos o
+                        interesse e permanecemos à disposição para futuras oportunidades.
                     </div>
                     <div id="msg-final" class="form-message success">
-                        Obrigado pelas informações. A equipe da Flux irá analisar os dados enviados e, caso a operação seja aderente, entraremos em contato para dar continuidade à conversa.
+                        Obrigado pelas informações. A equipe da Flux irá analisar os dados enviados e, caso a operação
+                        seja aderente, entraremos em contato para dar continuidade à conversa.
                     </div>
                 </form>
             </div>
@@ -162,25 +179,26 @@
             <div class="sobre-content">
                 <h1>Sobre a Flux!</h1>
                 <p>
-                    Somos a Flux! Crédito inteligente para licitantes. Respondemos como FLUX S/A (CNPJ: 32.194.496/0001-78), uma fintech voltada à concessão de crédito para micro e pequenas empresas participantes de licitações governamentais. Nascemos para sanar uma das maiores dificuldades de atuação em um dos mercados de crédito mais complexos do país. Através do nosso conhecimento em licitações públicas, queremos apoiar os pequenos empreendedores, de maneira fácil, flexível e descomplicada.
+                    Somos a Flux! Crédito inteligente para licitantes. Respondemos como FLUX S/A (CNPJ:
+                    32.194.496/0001-78), uma fintech voltada à concessão de crédito para micro e pequenas empresas
+                    participantes de licitações governamentais. Nascemos para sanar uma das maiores dificuldades de
+                    atuação em um dos mercados de crédito mais complexos do país. Através do nosso conhecimento em
+                    licitações públicas, queremos apoiar os pequenos empreendedores, de maneira fácil, flexível e
+                    descomplicada.
                 </p>
-                
-            </div>
-            <div class="sobre-form">
-                <form>
-                    <input type="text" placeholder="Nome completo" required>
-                    <input type="email" placeholder="Seu melhor e-mail" required>
-                    <button type="submit" class="submit-button">Enviar</button>
-                </form>
+
             </div>
         </section>
     </main>
     <footer>
         <div class="footer-content">
             <div class="social-media">
-                <a href="#" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/flux.app.br/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#" class="social-icon" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/flux.app.br/" class="social-icon" target="_blank"
+                    rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/fluxappbr/" class="social-icon" target="_blank"
+                    rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <div class="contact-info">
                 <!-- <div class="contact-item">
@@ -196,4 +214,5 @@
     </footer>
     <script src="scripts/form-logic.js"></script>
 </body>
+
 </html>
