Alterado video para teste

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/JCrG8l21bus?autoplay=1&mute=1"
+                <iframe src="https://www.youtube.com/embed/JCrG8l21bus"
                     allow="autoplay; encrypted-media" frameborder="0" allowfullscreen>
                 </iframe>
 
